--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,21 @@ script:
   
 after_success:
   bash <(curl -s https://codecov.io/bash)
+
+before_install:
+  - openssl aes-256-cbc -K $encrypted_910b882b52ba_key -iv $encrypted_910b882b52ba_iv
+    -in deploy_rsa.enc -out deploy_rsa -d
+  - eval "$(ssh-agent -s)"
+  - chmod 600 /tmp/deploy_rsa
+  - ssh-add /tmp/deploy_rsa
+  
+  # deploy using rsync or scp
+# setup ENV ($) variables in the web interface
+deploy:
+  provider: script
+  skip_cleanup: true
+  script: rsync -r --delete-after --quiet 
+     ${TRAVIS_BUILD_DIR}/code      
+     ${DEPLOY_USER}@${DEPLOY_SERVER}:/home/${DEPLOY_USER}/githubstuff
+  on:
+    branch: master
